--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,17 @@
 name: Build Python Package
 
 on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
+  workflow_call:
+    inputs:
+      python-version:
+        required: true
+        type: string
 
 jobs:
   build:
-    uses: "./.github/workflows/install.yml"
+    uses: "marvin-kluge/ci_templates/.github/workflows/install.yml@main"
     with:
-      python-version: "3.7"
+      python-version: ${{ inputs.python-version }}
 
   build-package:
     runs-on: ubuntu-latest
@@ -21,7 +23,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.7"
+          python-version: ${{ inputs.python-version }}
 
       - name: Install build and anybadge
         run: |
