chore: made workflows optional

--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -32,12 +32,20 @@ on:
 
 jobs:
   build:
+    if: ${{inputs.BUILD_PACKAGE}}
     uses: "marvin-kluge/ci_templates/.github/workflows/utils/build.yml@main"
     with:
       PYTHON_VERSION: "3.11"
 
-  code-quality:
+  pylint:
+    if: ${{inputs.USE_PYLINT}}
     uses: "marvin-kluge/ci_templates/.github/workflows/code_quality/pylint.yml@main"
+    with:
+      PYTHON_VERSION: "3.11"
+      PYTHON_PACKAGE_NAME: "teaser"
+  ruff:
+    if: ${{inputs.USE_RUFF}}
+    uses: "marvin-kluge/ci_templates/.github/workflows/code_quality/ruff.yml@main"
     with:
       PYTHON_VERSION: "3.11"
       PYTHON_PACKAGE_NAME: "teaser"
