chore: fixed ruff badge error

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          PYTHON_VERSION: ${{ inputs.PYTHON_VERSION }}
+         python-version: ${{ inputs.PYTHON_VERSION }}
 
       - name: Upgrade Pip
         run: pip install --upgrade pip
