chore: changed naming

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -21,7 +21,7 @@ on:
         default: ""
 
 jobs:
-  install:
+  install_repository:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
