--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ on:
         default: ""
 
 jobs:
-  build:
+  install:
     uses: "marvin-kluge/ci_templates/.github/workflows/install.yml@main"
     with:
       PYTHON_VERSION: ${{ inputs.PYTHON_VERSION }}
@@ -31,7 +31,7 @@ jobs:
 
   build-package:
     runs-on: ubuntu-latest
-    needs: build
+    needs: install
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
