--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,14 @@ name: Build Python Package
 on:
   workflow_call:
     inputs:
+      BUILD_PACKAGE:
+        required: false
+        type: boolean
+        default: false
+      GENERATE_DOCUMENTATION:
+        required: false
+        type: boolean
+        default: false
       PYTHON_VERSION:
         required: true
         type: string
@@ -29,36 +37,39 @@ jobs:
       INSTALL_REQUIREMENTS: ${{ inputs.INSTALL_REQUIREMENTS }}
       EXTRA_REQUIREMENTS: ${{ inputs.EXTRA_REQUIREMENTS }}
 
+  sphinx_doc:
+    if: ${{inputs.GENERATE_DOCUMENTATION}}
+    needs: install
+    uses: "marvin-kluge/ci_templates/.github/workflows/sphinx_doc.yml@main"
+    with:
+      PYTHON_VERSION: ${{inputs.PYTHON_VERSION}}
+      PYTHON_PACKAGE_NAME: ${{inputs.PYTHON_PACKAGE_NAME}}
+
   build-package:
+    if: ${{inputs.BUILD_PACKAGE}}
+
     runs-on: ubuntu-latest
     needs: install
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           PYTHON_VERSION: ${{ inputs.PYTHON_VERSION }}
-
       - name: Install build and anybadge
         run: |
           pip install --upgrade build anybadge
-
       - name: Build Package
         run: python -m build
-
       - name: Install Built Package
         run: |
           FILE_NAME=$(ls dist/*.tar.gz)
           pip install "$FILE_NAME"
-
       - name: Create build directory
         run: mkdir -p ${{ github.ref_name }}/build
-
       - name: Generate Badge
         run: anybadge --value="passing" --file=${{ github.ref_name }}/build/build.svg --label build
-
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
