--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,6 @@ jobs:
 
   build-package:
     if: ${{inputs.BUILD_PACKAGE}}
-
     runs-on: ubuntu-latest
     needs: install
     steps:
@@ -56,7 +55,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          PYTHON_VERSION: ${{ inputs.PYTHON_VERSION }}
+          python-version: ${{ inputs.PYTHON_VERSION }}
       - name: Install build and anybadge
         run: |
           pip install --upgrade build anybadge
