chore: changed job name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,10 @@ on:
         required: false
         type: string
         default: ""
+      PYTHON_PACKAGE_NAME:
+        required: false
+        type: string
+        default: ""
 
 jobs:
   install:
