--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,14 +3,6 @@ name: Build Python Package
 on:
   workflow_call:
     inputs:
-      BUILD_PACKAGE:
-        required: false
-        type: boolean
-        default: false
-      GENERATE_DOCUMENTATION:
-        required: false
-        type: boolean
-        default: false
       PYTHON_VERSION:
         required: true
         type: string
@@ -33,26 +25,8 @@ on:
         default: ""
 
 jobs:
-  install:
-    uses: "marvin-kluge/ci_templates/.github/workflows/install.yml@main"
-    with:
-      PYTHON_VERSION: ${{ inputs.PYTHON_VERSION }}
-      USE_UV: ${{ inputs.USE_UV }}
-      INSTALL_REQUIREMENTS: ${{ inputs.INSTALL_REQUIREMENTS }}
-      EXTRA_REQUIREMENTS: ${{ inputs.EXTRA_REQUIREMENTS }}
-
-  sphinx_doc:
-    if: ${{inputs.GENERATE_DOCUMENTATION}}
-    needs: install
-    uses: "marvin-kluge/ci_templates/.github/workflows/sphinx_doc.yml@main"
-    with:
-      PYTHON_VERSION: ${{inputs.PYTHON_VERSION}}
-      PYTHON_PACKAGE_NAME: ${{inputs.PYTHON_PACKAGE_NAME}}
-
   package:
-    if: ${{inputs.BUILD_PACKAGE}}
     runs-on: ubuntu-latest
-    needs: install
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -60,6 +34,31 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.PYTHON_VERSION }}
+
+      - name: Upgrade Pip
+        run: pip install --upgrade pip
+
+      - name: Install UV or Pip
+        id: install-method
+        run: |
+          if [[ "${{ inputs.USE_UV }}" == "true" ]]; then
+            echo "Installing and setting up uv"
+            pip install uv
+            echo "install-cmd=uv pip install --system" >> $GITHUB_OUTPUT
+          else
+            echo "Using standard pip"
+            echo "install-cmd=pip install" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Install Requirements
+        if: inputs.INSTALL_REQUIREMENTS == true && hashFiles('requirements.txt') != ''
+        run: |
+          ${{ steps.install-method.outputs.install-cmd }} -r requirements.txt
+
+      - name: Install Project
+        if: hashFiles('setup.py', 'pyproject.toml') != ''
+        run: |
+          ${{ steps.install-method.outputs.install-cmd }} -e .${{ inputs.EXTRA_REQUIREMENTS }}
       - name: Install build and anybadge
         run: |
           pip install --upgrade build anybadge
